--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
     <header>
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <!-- <h1>{{ site.title | default: site.github.repository_name }}</h1> -->
+	  <h1>{{ site.title }}</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
@@ -22,8 +23,8 @@
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
+            <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
